--- a/src/index.pug
+++ b/src/index.pug
@@ -4,9 +4,9 @@ html(lang="ru")
     meta(charset="UTF-8")
     meta(http-equiv="X-UA-Compatible", content="IE=edge")
     meta(name="viewport", content="width=device-width, initial-scale=1.0")
+    link(rel="shortcut icon", href="icon/favicon.svg", type="image/x-icon")
     title Document
   body
     h1 Title
     p Hello from pug.
-    script(src='./index.js')
-    
+    script(src='./index.js', type="text/javascript")
