--- a/src/index.pug
+++ b/src/index.pug
@@ -8,5 +8,14 @@ html(lang="ru")
     title Document
   body
     h1 Title
-    p Hello from pug.
+    p.
+      Lorem, ipsum dolor sit amet consectetur adipisicing elit. Soluta, odit error dolorem reprehenderit minus eum neque in repellat debitis, delectus possimus quaerat molestias, nostrum ab obcaecati accusantium exercitationem fuga illum?
+
+    .text-block
+      p.
+        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Soluta, odit error dolorem reprehenderit minus eum neque in repellat debitis, delectus possimus quaerat molestias, nostrum ab obcaecati accusantium exercitationem fuga illum?
+    .text-block-bold
+      p.
+        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Soluta, odit error dolorem reprehenderit minus eum neque in repellat debitis, delectus possimus quaerat molestias, nostrum ab obcaecati accusantium exercitationem fuga illum?
+
     script(src='./index.js', type="text/javascript")
