--- a/src/index.pug
+++ b/src/index.pug
@@ -7,7 +7,7 @@ html(lang="ru")
     link(rel="shortcut icon", href="icon/favicon.svg", type="image/x-icon")
     title Document
   body
-    h1 Title
+    h1.icon-twitter Title
     p.
       Lorem, ipsum dolor sit amet consectetur adipisicing elit. Soluta, odit error dolorem reprehenderit minus eum neque in repellat debitis, delectus possimus quaerat molestias, nostrum ab obcaecati accusantium exercitationem fuga illum?
 
