--- a/src/layout/base.pug
+++ b/src/layout/base.pug
@@ -12,6 +12,7 @@ html(lang="en")
       link(rel="stylesheet", href="../zero.css")
       link(rel="stylesheet", href="../iconfont.css")
       link(rel="stylesheet", href="../index.scss")
+      link(rel="shortcut icon", href="../img/favicon.ico", type="image/x-icon")
   body
     block main
     script(src='../index.js', type="text/javascript")
