--- a/src/index.scss
+++ b/src/index.scss
@@ -1,32 +1,18 @@
-$color_h1: tomato;
-//import google font
-//&display=swap&subset=cyrillic-ext
-@font-face {
-  font-family: "montserrat";
-  src: local("☺"), url("fonts/montserrat.woff") format("woff"),
-    url("fonts/montserrat.ttf") format("truetype"),
-    url("fonts/montserrat.svg") format("svg");
-  font-weight: normal;
-  font-style: normal;
-}
-@font-face {
-  font-family: "montserrat";
-  src: local("☺"), url("fonts/montserrat_bold.woff") format("woff"),
-    url("fonts/montserrat_bold.ttf") format("truetype"),
-    url("fonts/montserrat_bold.svg") format("svg");
-  font-weight: 700;
-  font-style: normal;
-}
-
+@import url("./zero.css");
+@import url("./fonts/monsterrat.css");
+@import url("./fonts/iconfont.css");
 //Default font
 $fontFamily: "montserrat";
+
+$color_h1: tomato;
 h1 {
   color: $color_h1;
 }
 .text-block {
-  font-family: "montserrat";
+  font-family: $fontFamily;
+  font-weight: 400;
 }
 .text-block-bold {
-  font-family: "montserrat";
+  font-family: $fontFamily;
   font-weight: 700;
 }
