--- a/src/layout/base.pug
+++ b/src/layout/base.pug
@@ -12,5 +12,5 @@ html(lang="en")
       link(rel="stylesheet", href="../index.scss")
     block script
       script(src='../index.js', type="text/javascript")
-  body
+  body.main
     block main
