fonts moved to subdirs.

--- a/src/index.scss
+++ b/src/index.scss
@@ -1,6 +1,6 @@
 @import url("./zero.css");
-@import url("./fonts/monsterrat.css");
-@import url("./fonts/iconfont.css");
+@import url("./fonts/montserrat/monsterrat.css");
+@import url("./fonts/iconfont/iconfont.css");
 //Default font
 $fontFamily: "montserrat";
 
