--- a/src/pages/colors-and-type.css
+++ b/src/pages/colors-and-type.css
@@ -1,33 +1,13 @@
 @import url(../layout/ui-kit.css);
-h1 {
-  font-size: 24.7px;
-  line-height: 29.26px;
-}
-
-h2 {
-  font-size: 19.6px;
-  line-height: 23.16px;
-}
-h3 {
-  font-size: 12.4px;
-  line-height: 14.63px;
-}
-body {
-  font-size: 13.8px;
-  line-height: 24px;
-}
-
+@import url(../fonts/type.css);
 .wrapper {
   /* text-align: center; */
 }
 .main__box {
-  /* position: absolute;
-  top: 145px; */
   max-width: 1132px;
   /* max-width: 800px; */
   /* margin: 145px 158px 0px 149.74px; */
   margin-top: 145px;
-  /* padding: 0px 15px; */
   display: flex;
   flex-wrap: wrap;
   justify-content: space-around;
@@ -39,7 +19,7 @@ body {
   max-width: 281.26px;
 }
 .main__column-font {
-  /* margin-left: 149.74px; */
+  margin-left: 10px;
   /* flex: 0 1 50%; */
   max-width: 427px;
 }
