changed @import to @use in scss, insstalled del-cli plugin

--- a/src/layout/base.pug
+++ b/src/layout/base.pug
@@ -9,7 +9,7 @@ html(lang="en")
     block favicon
       link(rel="shortcut icon", href="../img/favicon.ico", type="image/x-icon")
     block style
-      link(rel="stylesheet", href="../index.scss")
+      //- link(rel="stylesheet", href="../index.scss")
     block script
       script(src='../index.js', type="text/javascript")
   body.main
