--- a/src/layout/ui-kit-gray.pug
+++ b/src/layout/ui-kit-gray.pug
@@ -1,4 +1,7 @@
 extends ui-kit
 
 block style
-  link(rel="stylesheet", href="../layout/ui-kit-gray.css")
+  link(rel="stylesheet", href="../layout/ui-kit-gray.scss")
+
+block script
+  script(src='../layout/ui-kit-gray.js', type="text/javascript")
