--- a/src/layout/ui-kit.pug
+++ b/src/layout/ui-kit.pug
@@ -4,7 +4,7 @@ extends base
 //- append link
 //-   link(rel="stylesheet", href="../layout/ui-kit.css")
 block style
-  link(rel="stylesheet", href="../layout/ui-kit.css")
+  link(rel="stylesheet", href="../layout/ui-kit.scss")
 block script
   script(src='../layout/ui-kit.js', type="text/javascript")
 block main
