--- a/src/pages/colors-and-type.pug
+++ b/src/pages/colors-and-type.pug
@@ -3,7 +3,7 @@ extends ../layout/ui-kit
 block title
   |Colors & Type
 block style
-  link(rel="stylesheet", href="./colors-and-type.css")
+  link(rel="stylesheet", href="./colors-and-type.scss")
 
 block content
   .wrapper
