--- a/src/fonts/iconfont/iconfont.scss
+++ b/src/fonts/iconfont/iconfont.scss
@@ -1,8 +1,10 @@
+$font-path: "../fonts";
+
 @font-face {
   font-family: "iconfont";
-  src: url("./iconfont.ttf?xb8o7r") format("truetype"),
-    url("./iconfont.woff?xb8o7r") format("woff"),
-    url("./iconfont.svg?xb8o7r#iconfont") format("svg");
+  src: url("#{$font-path}/iconfont/iconfont.ttf?xb8o7r") format("truetype"),
+    url("#{$font-path}/iconfont/iconfont.woff?xb8o7r") format("woff"),
+    url("#{$font-path}/iconfont/iconfont.svg?xb8o7r#iconfont") format("svg");
   font-weight: normal;
   font-style: normal;
   font-display: block;
