--- a/src/pages/form-elements.pug
+++ b/src/pages/form-elements.pug
@@ -3,8 +3,72 @@ extends ../layout/ui-kit
 block title
   |Form Elements
 
+block style
+  link(rel="stylesheet", href="./form-elements.scss")
+block script
+  script(src="./form-elements.js", type="text/javascript")
+  //- script(src="../../node_modules/jquery/dist/jquery.min.js", type="text/javascript") 
+  //- script(src="../../node_modules/item-quantity-dropdown/lib/item-quantity-dropdown.min.js", type="text/javascript") 
 block content
+  .form-elements__box
+    .form-elements__column
+      .element-box 
+        .element-box__caption
+          .element-box__caption_left
+            h3 Text Field
+          .element-box__caption_right
+            h3 Default
+        //- .element-box__body 
+        input.input-string(type="text",placeholder="Email")
+      .element-box 
+        .element-box__caption
+          .element-box__caption_left
+            h3 Text Field
+          .element-box__caption_right
+            h3 Hover / Focus
+        .element-box__body 
+        input.input-string(type="text",placeholder="This is pretty awesome")
+      .element-box 
+        .element-box__caption
+          .element-box__caption_left
+            h3 Dropdown
+          .element-box__caption_right
+            h3 
+        .element-box__body 
+          .iqdropdown
+            p.iqdropdown-selection
+            .iqdropdown-menu
+              .iqdropdown-menu-option(data-id="item1")
+                div
+                  p.iqdropdown-item Item 
+                  p.iqdropdown-description A short description
+              .iqdropdown-menu-option(data-id="item2")
+                div
+                  p.iqdropdown-item Item 
+                  p.iqdropdown-description A short description
+      p.
+        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Minus ducimus aut natus quod? Possimus repellat nesciunt consequatur eligendi iste soluta molestias harum, nulla nobis deleniti quibusdam, quisquam exercitationem aut odit.
+    .form-elements__column
+      p.
+        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Minus ducimus aut natus quod? Possimus repellat nesciunt consequatur eligendi iste soluta molestias harum, nulla nobis deleniti quibusdam, quisquam exercitationem aut odit.
+
+    .form-elements__column
+      p.
+        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Minus ducimus aut natus quod? Possimus repellat nesciunt consequatur eligendi iste soluta molestias harum, nulla nobis deleniti quibusdam, quisquam exercitationem aut odit.
+
+  .form-elements__box
+    .form-elements__column
+    .form-elements__column
+    .form-elements__column
+  .form-elements__box
+    .form-elements__column
+    .form-elements__column
+    .form-elements__column
+  .form-elements__box
+    .form-elements__column_2
+    .form-elements__column_2
+
+
+
   h1 Title
   hr
-  p.
-    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Minus ducimus aut natus quod? Possimus repellat nesciunt consequatur eligendi iste soluta molestias harum, nulla nobis deleniti quibusdam, quisquam exercitationem aut odit.
