--- a/src/pages/blocks/dropdown/dropdown.pug
+++ b/src/pages/blocks/dropdown/dropdown.pug
@@ -7,7 +7,7 @@ mixin menu-option(caption)
       h3 0
       +dropdown__button(true)
 mixin dropdown
-  .dropown.dropdown_opened
+  .dropdown.dropdown_opened
     p.dropdown__selection Сколько гостей
     p.icon-expand_more.dropdown__selection_arrow
     .dropdown__menu
