--- a/src/pages/blocks/dropdown/dropdown.scss
+++ b/src/pages/blocks/dropdown/dropdown.scss
@@ -3,7 +3,7 @@
 @use '../../../fonts/iconfont/iconfont.scss';
 
 $height: 44px;
-.dropown {
+.dropdown {
   align-items: center;
   border: 1px solid color.$dark_25;
   border-radius: 4px;
