--- a/src/pages/form-elements.pug
+++ b/src/pages/form-elements.pug
@@ -18,8 +18,8 @@ block content
             h3 Text Field
           .element-box__caption_right
             h3 Default
-        //- .element-box__body 
-        input.input-string(type="text",placeholder="Email")
+        .element-box__body 
+          input.input-string(type="text",placeholder="Email")
       .element-box 
         .element-box__caption
           .element-box__caption_left
@@ -27,7 +27,7 @@ block content
           .element-box__caption_right
             h3 Hover / Focus
         .element-box__body 
-        input.input-string(type="text",placeholder="This is pretty awesome")
+          input.input-string(type="text",placeholder="This is pretty awesome")
       .element-box 
         .element-box__caption
           .element-box__caption_left
