--- a/src/pages/blocks/dropdown/__button/dropdown__button.scss
+++ b/src/pages/blocks/dropdown/__button/dropdown__button.scss
@@ -4,6 +4,7 @@
   border-radius: 50%;
   border: 1px solid color.$dark_25;
   color: color.$dark_50;
+  background-color: white;
   width: 30px;
   height: 30px;
   text-align: center;
@@ -11,9 +12,19 @@
   padding-top: 3px;
   font-size: 18px;
   cursor: pointer;
-  opacity: 1;
 }
+// .dropdown__button:enabled {
+//   border: 1px solid color.$dark_25;
+//   color: color.$dark_50;
+//   // vertical-align: middle;
+//   cursor: pointer;
+//   // opacity: 1;
+// }
 
 .dropdown__button:disabled {
+  // border: 1px solid color.$dark_5;
+  // color: color.$dark_5;
+  cursor: initial;
   opacity: 0.5;
+  pointer-events: none;
 }
