--- a/src/pages/blocks/input-string/input-string.scss
+++ b/src/pages/blocks/input-string/input-string.scss
@@ -7,7 +7,8 @@
   // flex: 0 1 320px;
   display: block;
   width: 100%;
-  height: 44px;
+  // height: 44px;
+  height: 100%;
   padding-left: 15px;
 }
 .input-string::placeholder {
