added date input

--- a/src/pages/blocks/dropdown/dropdown.pug
+++ b/src/pages/blocks/dropdown/dropdown.pug
@@ -11,15 +11,17 @@ mixin dropdown
     .dropdown__selection
       p.dropdown__result Сколько гостей
       p.icon-expand_more.dropdown__selection_arrow
-    .dropdown__menu
+    .dropdown__menu.hidden
       +menu-option("взрослые")
       +menu-option("дети")
       +menu-option("младенцы")
       .dropdown__menu-controls
         button.dropdown__button-clear
-          h3.dropdown__menu-clear очистить
+          h3.dropdown__menu-clear.hidden очистить
         button.dropdown__button-apply
           h3.dropdown__menu-apply применить
+    
+
   //-   p.iqdropdown-selection
   //-   .iqdropdown-menu
   //-     .iqdropdown-menu-option(data-id="item1")
