--- a/src/pages/blocks/dropdown/dropdown.scss
+++ b/src/pages/blocks/dropdown/dropdown.scss
@@ -38,6 +38,7 @@ $height: 44px;
   padding-top: 1px;
   font-size: 13px;
 }
+
 .dropdown__menu {
   background-color: #ffffff;
   border: 1px solid color.$dark_25;
@@ -45,7 +46,7 @@ $height: 44px;
   border-bottom-left-radius: 4px;
   border-bottom-right-radius: 4px;
   cursor: default;
-  display: none;
+  display: block;
   left: 0;
   margin: -2px -1px 0;
   position: absolute;
@@ -79,9 +80,13 @@ $height: 44px;
 }
 .dropdown__button-clear {
   color: inherit;
+  display: inline;
   background-color: #ffffff;
 }
 .dropdown__button-apply {
   color: inherit;
   background-color: #ffffff;
+}
+.hidden {
+  display: none;
 }
