--- a/src/pages/form-elements.scss
+++ b/src/pages/form-elements.scss
@@ -32,6 +32,19 @@
 }
 .element-box__body {
   height: 44px;
-
   // display: flex;
 }
+.input-date{
+  text-transform: uppercase;
+  background: #ffffff;
+  border: 1px solid rgba(31, 32, 65, 0.25);
+  border-radius: 4px;
+  // color: rgba(31, 32, 65, 0.25);
+  // flex: 0 1 320px;
+  display: block;
+  width: 100%;
+  // height: 44px;
+  height: 100%;
+  padding-left: 13px;
+}
+
