--- a/src/pages/form-elements.scss
+++ b/src/pages/form-elements.scss
@@ -6,7 +6,7 @@
 @use './blocks/dropdown/dropdown';
 @use '../fonts/iconfont/iconfont.scss';
 @use "air-datepicker/dist/css/datepicker.css";
-
+@use "./blocks/datepicker/datepicker-toxin.scss";
 $height: 44px;
 
 .form-elements__box {
